--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -653,79 +653,79 @@
  STATE_652:0 "Bozoum"
  STATE_653:0 "Bouar"
  STATE_654:0 "Berberati"
- STATE_655:0 "West Sahara"
- STATE_656:0 "Kuwait"
- STATE_657:0 "Birobidzhan"
- STATE_658:0 "Abu Dhabi"
- STATE_659:0 "Aden"
- STATE_660:0 "Equatorial Africa"
- STATE_661:0 "Tripolitania"
- STATE_662:0 "Sirte"
- STATE_663:0 "Cyrenaica"
- STATE_664:0 "Southern Slovakia"
- STATE_665:0 "Gabès"
- STATE_666:0 "Lappland"
- STATE_667:0 "Lesser Sunda Islands"
- STATE_668:0 "The Moluccas"
- STATE_669:0 "West Papua"
- STATE_670:0 "Laos"
- STATE_671:0 "Tonkin"
- STATE_672:0 "Sumatra"
- STATE_673:0 "Sulawesi"
- STATE_674:0 "Central Australia"
- STATE_675:0 "Al Hajara"
- STATE_676:0 "Mosul"
- STATE_677:0 "Aleppo"
- STATE_678:0 "Rub al Khali"
- STATE_679:0 "Hejaz"
- STATE_680:0 "Deir-az-Zur"
- STATE_681:0 "Cape"
- STATE_682:0 "Northern Ontario"
- STATE_683:0 "Northeastern Canada"
- STATE_684:0 "Caroline Islands"
- STATE_685:0 "Panamá Canal"
- STATE_686:0 "Puerto Rico"
- STATE_687:0 "British Guyana"
- STATE_688:0 "Chaco Boreal"
- STATE_689:0 "Jamaica"
- STATE_690:0 "Northern Bahamas"
- STATE_691:0 "Trinidad"
- STATE_692:0 "Windward Islands"
- STATE_693:0 "Southern Bahamas"
- STATE_694:0 "French Caribbean"
- STATE_695:0 "Curaçao"
- STATE_696:0 "Bermuda"
- STATE_697:0 "Madeira"
- STATE_698:0 "Azores"
- STATE_699:0 "Rio de Oro"
- STATE_700:0 "Sierra Leone"
- STATE_701:0 "Gambia"
- STATE_702:0 "Cape Verde"
- STATE_703:0 "Ascension"
- STATE_704:0 "Saint Helena"
- STATE_705:0 "Sao Tome"
- STATE_706:0 "Reunion"
- STATE_707:0 "Mauritius"
- STATE_708:0 "Comoro Islands"
- STATE_709:0 "Seychelles"
- STATE_710:0 "Diego Garcia"
- STATE_711:0 "Christmas Island"
- STATE_712:0 "Cocos Islands"
- STATE_713:0 "Kerguelen"
- STATE_714:0 "Heilungkiang"
- STATE_715:0 "Liaoning"
- STATE_716:0 "Liaotung"
- STATE_717:0 "Sungkiang"
- STATE_718:0 "Stanleyville"
- STATE_719:0 "Natal"
- STATE_720:0 "South Georgia"
- STATE_721:0 "Portuguese Timor"
- STATE_722:0 "Petsamo"
- STATE_723:0 "South Island"
- STATE_724:0 "Northern Malay"
- STATE_725:0 "Nauru"
- STATE_726:0 "Samoa"
- STATE_727:0 "Line Islands"
+ STATE_655:0 "West Sara"
+ STATE_656:0 "Omdurman"
+ STATE_657:0 "Al Ubayyid"
+ STATE_658:0 "Sheikan"
+ STATE_659:0 "Umm Diwaykarat"
+ STATE_660:0 "An Nil Al-Abyad"
+ STATE_661:0 "Al Jazira"
+ STATE_662:0 "Rabak"
+ STATE_663:0 "Sennar"
+ STATE_664:0 "Ad-Damazin"
+ STATE_665:0 "Malakal"
+ STATE_666:0 "Fashoda"
+ STATE_667:0 "An Nil Al Azraq"
+ STATE_668:0 "Jabal Qadir"
+ STATE_669:0 "Ghazel"
+ STATE_670:0 "Al Wahda"
+ STATE_671:0 "Sobat"
+ STATE_672:0 "Lower Jonqoley"
+ STATE_673:0 "Upper Jonqoley"
+ STATE_674:0 "Kapoeta"
+ STATE_675:0 "Ras Kasar"
+ STATE_676:0 "Gash-Barka"
+ STATE_677:0 "Anseba"
+ STATE_678:0 "Semenawi"
+ STATE_679:0 "Dahlaks"
+ STATE_680:0 "Assab"
+ STATE_681:0 "Debubawi"
+ STATE_682:0 "Asmara"
+ STATE_683:0 "Dindar"
+ STATE_684:0 "Uukwambi"
+ STATE_685:0 "Himba"
+ STATE_686:0 "Uukwaludhi"
+ STATE_687:0 "Ondonga"
+ STATE_688:0 "South Uukwangali"
+ STATE_689:0 "Kavango"
+ STATE_690:0 Damara"
+ STATE_691:0 "Oorlam"
+ STATE_692:0 "Skeleton Coast"
+ STATE_693:0 "Walvis Bay"
+ STATE_694:0 "Central Kalahari"
+ STATE_695:0 "North Kalahari"
+ STATE_696:0 "Ovambo"
+ STATE_697:0 "Bangkawetse"
+ STATE_698:0 "Kgatla"
+ STATE_699:0 "Bamangwato"
+ STATE_700:0 "Kwena"
+ STATE_701:0 "Kalanga"
+ STATE_702:0 "Tsoa"
+ STATE_703:0 "Ndebele"
+ STATE_704:0 "Shua"
+ STATE_705:0 "Mbukushu"
+ STATE_706:0 "Fwe"
+ STATE_707:0 "Masubiya"
+ STATE_708:0 "East Kalahari"
+ STATE_709:0 "South Kalahari"
+ STATE_710:0 "Luvale"
+ STATE_711:0 "Mbunda"
+ STATE_712:0 "Aussa"
+ STATE_713:0 "Dir"
+ STATE_714:0 "East Dir"
+ STATE_715:0 "Habr Yunis"
+ STATE_716:0 "Hobyo"
+ STATE_717:0 "Barbacadle"
+ STATE_718:0 "Burgabo"
+ STATE_719:0 "Aweer Kenya"
+ STATE_720:0 "Hawiye Kenya"
+ STATE_721:0 "Harar"
+ STATE_722:0 "Darood"
+ STATE_723:0 "Hawiye Ethiopia"
+ STATE_724:0 "Oromo-Galla"
+ STATE_725:0 "North Kavongo"
+ STATE_726:0 "Ongandera"
+ STATE_727:0 "South Batswana"
  STATE_728:0 "Guangzhouwan"
  STATE_729:0 "Macau"
  STATE_730:0 "St Pierre and Miquelon"
