--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -30,7 +30,7 @@
  STATE_29: "Ash Sharqiyah"
  STATE_30: "Muscat"
  STATE_31: "Ibri"
- STATE_32:3 "Nizwa"
+ STATE_32: "Nizwa"
  STATE_33: "Sohar"
  STATE_34: "Al Wusta"
  STATE_35: "Rub' al Khali"
@@ -688,7 +688,7 @@
  STATE_687: "Ondonga"
  STATE_688: "South Uukwangali"
  STATE_689: "Kavango"
- STATE_690: Damara"
+ STATE_690: "Damara"
  STATE_691: "Oorlam"
  STATE_692: "Skeleton Coast"
  STATE_693: "Walvis Bay"
