Map Changes from harakiri

--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -199,10 +199,10 @@
  STATE_198: "Cape Coast"
  STATE_199: "Grand Bassam"
  STATE_200: "Tai"
- STATE_201: "Akan"
+ STATE_201: "Bondouku"
  STATE_202: "Comoe"
- STATE_203: "Mande"
- STATE_204: "Kong"
+ STATE_203: "Odienne"
+ STATE_204: "Worodougou"
  STATE_205: "Liberia"
  STATE_206: "Freetown"
  STATE_207: "Kissidougou"
@@ -272,8 +272,8 @@
  STATE_271: "Maryland"
  STATE_272: "Gallinas"
  STATE_273: "Haut Plateau"
- STATE_274: "Mandege"
- STATE_275: "Sankaran"
+ STATE_274: "Guelemou"
+ STATE_275: "Sankara"
  STATE_276: "Diallon"
  STATE_277: "Dekha"
  STATE_278: "Touat"
@@ -864,12 +864,12 @@
  STATE_863: "West Sinai"
  STATE_864: "Shararat"
  STATE_865: "Bani Atiya"
- STATE_866: ""
- STATE_867: ""
- STATE_868: ""
- STATE_869: ""
- STATE_870: ""
- STATE_871: ""
+ STATE_866: "Baoule"
+ STATE_867: "Sanwi"
+ STATE_868: "Moronou"
+ STATE_869: "Indenie"
+ STATE_870: "Kabadougou"
+ STATE_871: "Senofo"
  STATE_872: ""
  STATE_873: ""
  STATE_874: ""
