--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -200,7 +200,7 @@
  STATE_199: "Grand Bassam"
  STATE_200: "Tai"
  STATE_201: "Bondouku"
- STATE_202: "Comoe"
+ STATE_202: "Bouna"
  STATE_203: "Odienne"
  STATE_204: "Worodougou"
  STATE_205: "Liberia"
