hejaz, egypt & nubia

--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -227,6 +227,16 @@
  ARD_autonomy_ottoman_khedive:0 "Ardalan Khedive"
  ARD_autonomy_ottoman_khedive_DEF:0 "the Khedive of Ardalan"
  ARD_autonomy_ottoman_khedive_ADJ:0 "Kurdish"
+ 
+ DHU:0 "Dhufayr"
+ DHU_DEF:0 "Dhufayr"
+ DHU_ADJ:0 "Dhufayr"
+ DHU_autonomy_ottoman_eyalet:0 "Dhufayr Eyalet"
+ DHU_autonomy_ottoman_eyalet_DEF:0 "the Eyalet of Dhufayr"
+ DHU_autonomy_ottoman_eyalet_ADJ:0 "Dhufayr"
+ DHU_autonomy_ottoman_khedive:0 "Dhufayr Khedive"
+ DHU_autonomy_ottoman_khedive_DEF:0 "the Khedive of Dhufayr"
+ DHU_autonomy_ottoman_khedive_ADJ:0 "Dhufayr"
 
  FAR:0 "Fars"
  FAR_ADJ:0 "Fars"
@@ -318,6 +328,46 @@
  JOR_autonomy_ottoman_khedive:0 "Hashemite Khedive"
  JOR_autonomy_ottoman_khedive_DEF:0 "the Khedive of Jordan"
  JOR_autonomy_ottoman_khedive_ADJ:0 "Hashemite"
+ 
+ BSK:0 "Bani Shakr"
+ BSK_DEF:0 "Bani Shakr"
+ BSK_ADJ:0 "Skahr"
+ BSK_autonomy_ottoman_eyalet:0 "Skahr Eyalet"
+ BSK_autonomy_ottoman_eyalet_DEF:0 "the Eyalet of Bani Shakr"
+ BSK_autonomy_ottoman_eyalet_ADJ:0 "Skahr"
+ BSK_autonomy_ottoman_khedive:0 "Skahr Khedive"
+ BSK_autonomy_ottoman_khedive_DEF:0 "the Khedive of Bani Shakr"
+ BSK_autonomy_ottoman_khedive_ADJ:0 "Skahr"
+ 
+ BAY:0 "Bani Aniya"
+ BAY_DEF:0 "Bani Aniya"
+ BAY_ADJ:0 "Aniyaa"
+ BAY_autonomy_ottoman_eyalet:0 "Aniyaa Eyalet"
+ BAY_autonomy_ottoman_eyalet_DEF:0 "the Eyalet of Bani Aniya"
+ BAY_autonomy_ottoman_eyalet_ADJ:0 "Aniyaa"
+ BAY_autonomy_ottoman_khedive:0 "Aniyaa Khedive"
+ BAY_autonomy_ottoman_khedive_DEF:0 "the Khedive of Bani Aniya"
+ BAY_autonomy_ottoman_khedive_ADJ:0 "Aniyaa"
+ 
+ HAW:0 "Hawaitat"
+ HAW_DEF:0 "Hawaitat"
+ HAW_ADJ:0 "Hawaitati"
+ HAW_autonomy_ottoman_eyalet:0 "Hawaitati Eyalet"
+ HAW_autonomy_ottoman_eyalet_DEF:0 "the Eyalet of Hawaitat"
+ HAW_autonomy_ottoman_eyalet_ADJ:0 "Hawaitati"
+ HAW_autonomy_ottoman_khedive:0 "Hawaitati Khedive"
+ HAW_autonomy_ottoman_khedive_DEF:0 "the Khedive of Hawaitat"
+ HAW_autonomy_ottoman_khedive_ADJ:0 "Hawaitati"
+ 
+ SHR:0 "Sharat"
+ SHR_DEF:0 "Sharat"
+ SHR_ADJ:0 "Sharatic"
+ SHR_autonomy_ottoman_eyalet:0 "Sharatic Eyalet"
+ SHR_autonomy_ottoman_eyalet_DEF:0 "the Eyalet of Sharat"
+ SHR_autonomy_ottoman_eyalet_ADJ:0 "Sharatic"
+ SHR_autonomy_ottoman_khedive:0 "Sharatic Khedive"
+ SHR_autonomy_ottoman_khedive_DEF:0 "the Khedive of Sharat"
+ SHR_autonomy_ottoman_khedive_ADJ:0 "Sharatic"
 
  ERZ:0 "Israel"
  ERZ_DEF:0 "Israel"
@@ -608,6 +658,16 @@
  ZID_autonomy_ottoman_khedive_ADJ:0 "Zaidi"
 
 # Nile
+ ABB:0 "Ababda"
+ ABB_DEF:0 "Ababda"
+ ABB_ADJ:0 "Ababdan"
+ ABB_autonomy_ottoman_eyalet:0 "Ababda Eyalet"
+ ABB_autonomy_ottoman_eyalet_DEF:0 "Ababda Eyalet"
+ ABB_autonomy_ottoman_eyalet_ADJ:0 "Ababdan"
+ ABB_autonomy_ottoman_khedive:0 "Ababdan Khedive"
+ ABB_autonomy_ottoman_khedive_DEF:0 "the Khedive of Ababdan"
+ ABB_autonomy_ottoman_khedive_ADJ:0 "Ababdan"
+ 
  EGY:0 "Egypt"
  EGY_DEF:0 "Egypt"
  EGY_ADJ:0 "Egyptian"
@@ -627,6 +687,16 @@
  MHD_autonomy_ottoman_khedive:0 "Mahidi Khedive"
  MHD_autonomy_ottoman_khedive_DEF:0 "the Khedive of Mahidi"
  MHD_autonomy_ottoman_khedive_ADJ:0 "Mahidi"
+ 
+ ALO:0 "Alodia"
+ ALO_DEF:0 "Alodia"
+ ALO_ADJ:0 "Alodian"
+ ALO_autonomy_ottoman_eyalet:0 "Alodian Eyalet"
+ ALO_autonomy_ottoman_eyalet_DEF:0 "Alodian Eyalet"
+ ALO_autonomy_ottoman_eyalet_ADJ:0 "Alodian"
+ ALO_autonomy_ottoman_khedive:0 "Alodian Khedive"
+ ALO_autonomy_ottoman_khedive_DEF:0 "the Khedive of Alodia"
+ ALO_autonomy_ottoman_khedive_ADJ:0 "Alodia"
 
  ALZ:0 "Al-Zubayr's Trading Empire"
  ALZ_DEF:0 "Al-Zubayr's Trading Empire"
@@ -647,6 +717,36 @@
  EQA_autonomy_ottoman_khedive:0 "Equatorian Khedive"
  EQA_autonomy_ottoman_khedive_DEF:0 "the Khedive of Equatorian"
  EQA_autonomy_ottoman_khedive_ADJ:0 "Equatorian"
+ 
+ JAA:0 "Shendi"
+ JAA_DEF:0 "Shendi"
+ JAA_ADJ:0 "Ja'alin"
+ JAA_autonomy_ottoman_eyalet:0 "Ja'alin Eyalet"
+ JAA_autonomy_ottoman_eyalet_DEF:0 "Ja'alin Eyalet"
+ JAA_autonomy_ottoman_eyalet_ADJ:0 "Ja'alin"
+ JAA_autonomy_ottoman_khedive:0 "Shendi Khedive"
+ JAA_autonomy_ottoman_khedive_DEF:0 "the Khedive of Shendi"
+ JAA_autonomy_ottoman_khedive_ADJ:0 "Ja'alin"
+ 
+ KDF:0 "Kurdofan"
+ KDF_DEF:0 "Kurdofan"
+ KDF_ADJ:0 "Nubian"
+ KDF_autonomy_ottoman_eyalet:0 "Nubian Eyalet"
+ KDF_autonomy_ottoman_eyalet_DEF:0 "Nubian Eyalet"
+ KDF_autonomy_ottoman_eyalet_ADJ:0 "Nubian"
+ KDF_autonomy_ottoman_khedive:0 "Lurdofan Khedive"
+ KDF_autonomy_ottoman_khedive_DEF:0 "the Khedive of Kurdofan"
+ KDF_autonomy_ottoman_khedive_ADJ:0 "Nubian"
+ 
+ SGY:0 "Shaigiya"
+ SGY_DEF:0 "Shaigiya"
+ SGY_ADJ:0 "Shaigiyan"
+ SGY_autonomy_ottoman_eyalet:0 "Shaigiyan Eyalet"
+ SGY_autonomy_ottoman_eyalet_DEF:0 "Shaigiyan Eyalet"
+ SGY_autonomy_ottoman_eyalet_ADJ:0 "Shaigiyan"
+ SGY_autonomy_ottoman_khedive:0 "Shaigiyan Khedive"
+ SGY_autonomy_ottoman_khedive_DEF:0 "the Khedive of Shaigiya"
+ SGY_autonomy_ottoman_khedive_ADJ:0 "Shaigiyan"
 
  SHK:0 "Shiluk"
  SHK_DEF:0 "Shiluk"
@@ -657,6 +757,16 @@
  SHK_autonomy_ottoman_khedive:0 "Shiluk Khedive"
  SHK_autonomy_ottoman_khedive_DEF:0 "the Khedive of Shiluk"
  SHK_autonomy_ottoman_khedive_ADJ:0 "Shiluk"
+ 
+ SNR:0 "Funjstan"
+ SNR_DEF:0 "Funjstan"
+ SNR_ADJ:0 "Funj"
+ SNR_autonomy_ottoman_eyalet:0 "Funj Eyalet"
+ SNR_autonomy_ottoman_eyalet_DEF:0 "Funj Eyalet"
+ SNR_autonomy_ottoman_eyalet_ADJ:0 "Funj"
+ SNR_autonomy_ottoman_khedive:0 "Funj Khedive"
+ SNR_autonomy_ottoman_khedive_DEF:0 "the Khedive of Funjstan"
+ SNR_autonomy_ottoman_khedive_ADJ:0 "Funj"
 
  SSD:0 "South Sudan"
  SSD_DEF:0 "South Sudan"
