--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -870,10 +870,10 @@
  STATE_869: "Indenie"
  STATE_870: "Kabadougou"
  STATE_871: "Senofo"
- STATE_872: ""
- STATE_873: ""
- STATE_874: ""
- STATE_875: ""
+ STATE_872: "Gedah"
+ STATE_873: "Boure"
+ STATE_874: "Kankan"
+ STATE_875: "Kong"
  STATE_876: ""
  STATE_877: ""
  STATE_878: ""
