West Africa Rehaul

--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -193,22 +193,22 @@
  STATE_192: "Togo"
  STATE_193: "Volta"
  STATE_194: "Ghofan"
- STATE_195: "Yendi"
+ STATE_195: "Mamprusi"
  STATE_196: "Kumasi"
  STATE_197: "Accra"
  STATE_198: "Cape Coast"
  STATE_199: "Grand Bassam"
  STATE_200: "Tai"
- STATE_201: "Bondouku"
+ STATE_201: "Gyaman"
  STATE_202: "Bouna"
  STATE_203: "Odienne"
  STATE_204: "Worodougou"
  STATE_205: "Liberia"
  STATE_206: "Freetown"
  STATE_207: "Kissidougou"
- STATE_208: "Bobo-Dioulasso"
+ STATE_208: "Sia"
  STATE_209: "Kossi"
- STATE_210: "Ouagadougou"
+ STATE_210: "Wagadougou"
  STATE_211: "Yatenga"
  STATE_212: "Fada N'Gourma"
  STATE_213: "Kaabu"
@@ -218,20 +218,20 @@
  STATE_217: "Nioro"
  STATE_218: "Fuladu"
  STATE_219: "Kassambara"
- STATE_220: "Boure"
+ STATE_220: "Sanankoro"
  STATE_221: "Bamako"
  STATE_222: "Sego"
  STATE_223: "Kala"
  STATE_224: "Asswanek"
- STATE_225: "Vassolo"
- STATE_226: "Djean"
- STATE_227: "Upper Massina"
+ STATE_225: "Koutiala"
+ STATE_226: "Bankass"
+ STATE_227: "Massina"
  STATE_228: "Tombo"
- STATE_229: "Lower Massina"
+ STATE_229: "Isandalam"
  STATE_230: "Gao"
  STATE_231: "Timbuktu"
  STATE_232: "Taoudenni"
- STATE_233: "Araouane"
+ STATE_233: "El Hodh"
  STATE_234: "Kidai"
  STATE_235: "Ceuta"
  STATE_236: "Melilla"
@@ -252,7 +252,7 @@
  STATE_251: "Brakna"
  STATE_252: "Wakore"
  STATE_253: "Walata"
- STATE_254: "El Hodh"
+ STATE_254: "Zenaga"
  STATE_255: "Saint Louis"
  STATE_256: "Dakar"
  STATE_257: "Baol"
@@ -271,7 +271,7 @@
  STATE_270: "Monrovia"
  STATE_271: "Maryland"
  STATE_272: "Gallinas"
- STATE_273: "Haut Plateau"
+ STATE_273: "Kpelle"
  STATE_274: "Guelemou"
  STATE_275: "Sankara"
  STATE_276: "Diallon"
@@ -308,15 +308,15 @@
  STATE_307: "Bas-Sassandra"
  STATE_308: "Yamoussoukro"
  STATE_309: "Marahoue"
- STATE_310: "West Bono"
- STATE_311: "East Bono"
- STATE_312: "Ahafo"
+ STATE_310: "Techiman"
+ STATE_311: "Atebobo"
+ STATE_312: "Aowin"
  STATE_313: "Oti"
  STATE_314: "Boltatanga"
  STATE_315: "Tandjaore"
  STATE_316: "Kara"
  STATE_317: "Lome"
- STATE_318: "Nalerigu"
+ STATE_318: "Mamprugu"
  STATE_319: "Popo"
  STATE_320: "Buromey"
  STATE_321: "Aquambo"
@@ -419,7 +419,7 @@
  STATE_418: "Liptako"
  STATE_419: "Wa"
  STATE_420: "Beregadougou"
- STATE_421: "Kenedougou"
+ STATE_421: "Sikasso"
  STATE_422: "Boffa"
  STATE_423: "Wasoulou"
  STATE_424: "Konyan"
@@ -874,23 +874,23 @@
  STATE_873: "Boure"
  STATE_874: "Kankan"
  STATE_875: "Kong"
- STATE_876: ""
- STATE_877: ""
- STATE_878: ""
- STATE_879: ""
- STATE_880: ""
- STATE_881: ""
- STATE_882: ""
- STATE_883: ""
- STATE_884: ""
- STATE_885: ""
- STATE_886: ""
- STATE_887: ""
- STATE_888: ""
- STATE_889: ""
- STATE_890: ""
- STATE_891: ""
- STATE_892: ""
+ STATE_876: "Kolondieba"
+ STATE_877: "Yanfolila"
+ STATE_878: "Djenne"
+ STATE_879: "Bandiagara"
+ STATE_880: "Bete"
+ STATE_881: "Bate"
+ STATE_882: "Loko"
+ STATE_883: "Kuranko"
+ STATE_884: "Mende"
+ STATE_885: "Gaoua"
+ STATE_886: "Nzerma"
+ STATE_887: "Salaga"
+ STATE_888: "Gonja"
+ STATE_889: "Akwamu"
+ STATE_890: "Kwahu"
+ STATE_891: "Bambouk"
+ STATE_892: "Yang-Yang"
  STATE_893: ""
  STATE_894: ""
  STATE_895: ""
