--- a/localisation/english/_technologies_l_english.yml
+++ b/localisation/english/_technologies_l_english.yml
@@ -26,8 +26,28 @@
   ranged_arms_equipment_3_desc: ""
   ranged_arms_equipment_4: "Musket 1"
   ranged_arms_equipment_4_desc: ""
-  ranged_arms_equipment_5: "Musket 2"
+  ranged_arms_equipment_5: "Rifle 0"
   ranged_arms_equipment_5_desc: ""
+  ranged_arms_subweapons_5: "Flintlock Pistol"
+  ranged_arms_subweapons_5_desc: ""
+  ranged_arms_weapons_5_1: "Practical Rifling"
+  ranged_arms_weapons_5_1_desc: ""
+  ranged_arms_weapons_5_2: "Breech Loading"
+  ranged_arms_weapons_5_2_desc: ""
+  ranged_arms_subweapons_5_1: "Caplock Pistol"
+  ranged_arms_subweapons_5_1_desc: ""
+  ranged_arms_subweapons_5_2: "Hand Revolvers"
+  ranged_arms_subweapons_5_2_desc: ""
+  ranged_arms_subweapons_5: "Flintlock Pistol"
+  ranged_arms_subweapons_5_desc: ""
+  ranged_arms_equipment_6: "Rifle 1"
+  ranged_arms_equipment_6_desc: ""
+  ranged_arms_weapons_6_1: "Improved Matchlock"
+  ranged_arms_weapons_6_1_desc: ""
+  ranged_arms_equipment_7: "Rifle 2"
+  ranged_arms_equipment_7_desc: ""
+  ranged_arms_weapons_6_1: "Improved Matchlock"
+  ranged_arms_weapons_6_1_desc: ""
  INFANTRY_TITLE_UNIFORMS: "Uniforms"
   uniforms_0: "Uniforms 0"
   uniforms_0_desc: ""
