--- a/localisation/english/_technologies_l_english.yml
+++ b/localisation/english/_technologies_l_english.yml
@@ -21,7 +21,7 @@
   ranged_arms_equipment_1: "Primitive Bows"
   ranged_arms_equipment_1_desc: ""
   ranged_arms_weapons_1_1: "Threaded String"
-  ranged_arms_weapons_1_1_desc:0 ""
+  ranged_arms_weapons_1_1_desc: ""
   ranged_arms_equipment_2: "Strengthened Bows"
   ranged_arms_equipment_2_desc: ""
   ranged_arms_equipment_3: "Early Muskets"
