some religion loc

--- a/localisation/english/_demographics_l_english.yml
+++ b/localisation/english/_demographics_l_english.yml
@@ -1,25 +1,22 @@
 ﻿l_english:
-# Religion Families
+# Religion Families 
  religion_christian_family: "§YChristianity§!"
- religion_christian_family_list: "The following religions are within the §YChristianity§! family:\n - $religion_catholicism$\n - $religion_protestantism$\n - $religion_orthodoxy$\n - "
- religion_islamic_family: "§YIslam§!
- religion_islamic_family_list: ""
- religion_other_abrahamic_family: "Other Abrahamic"
- religion_other_abrahamic_family_list: ""
- religion_saharan_family: "Saharan"
- religion_saharan_family_list: ""
- religion_west_african_family: "Western"
- religion_west_african_family_list: ""
- religion_central_african_family: "Central"
- religion_central_african_family_list: ""
+ religion_christian_family_list: "The following religions are within the $religion_christian_family$ religion family:\n - $religion_armenian$\n - $religion_catholicism$\n - $religion_coptic$\n - $religion_orthodoxy$\n - $religion_protestantism$\n \n$religion_same_family_tolerance_info_tt$"
+ religion_islamic_family: "§YIslam§!"
+ religion_islamic_family_list: "The following religions are within the $religion_islamic_family$ religion family:\n - Ibadi\n - Shia\n - Sunni\n \n$religion_same_family_tolerance_info_tt$"
+ religion_other_abrahamic_family: "§YOther Abrahamic§!"
+ religion_other_abrahamic_family_list: "The following religions are within the $religion_other_abrahamic_family$ religion family:\n - $religion_druzism$\n - $religion_judaism$\n \n$religion_same_family_tolerance_info_tt$"
+ religion_iranian_family: "Iranian"
+ religion_iranian_family_list: "The following religions are within the $religion_iranian_family$ religion family\n - $religion_yarsanism$\n - $religion_yazidism$\n - $religion_zoroastrianism$:\n \n$religion_same_family_tolerance_info_tt$"
+ religion_west_african_family: "West African"
+ religion_west_african_family_list: "The following religions are within the $religion_west_african_family$ religion family:\n \n$religion_same_family_tolerance_info_tt$"
  religion_hornic_family: "Hornic"
- religion_hornic_family_list: ""
+ religion_hornic_family_list: "The following religions are within the $religion_hornic_family$ religion family:\n \n$religion_same_family_tolerance_info_tt$"
  religion_bantu_family: "Bantu"
- religion_bantu_family_list: ""
- religion_pagan_family: "Pagan"
- religion_pagan_family_list: ""
+ religion_bantu_family_list: "The following religions are within the $religion_bantu_family$ religion family:\n \n$religion_same_family_tolerance_info_tt$"
  religion_no_family: "Isolated"
- religion_no_family_list: "This religion is an isolated or uncategorized religion."
+ religion_no_family_list: "This religion is an isolated or uncategorized religion. Countries with this religion as their primary religion will not get additional tolerance bonuses for all other religions."
+ religion_same_family_tolerance_info_tt: "Countries with a religion in this religious family will have additional tolerance bonuses for all other religions within this family."
 # Religions
  religion_catholicism: "§YCatholicism§!"
  religion_catholicism_adj: "Catholics"
@@ -59,3 +56,84 @@
  religion_zoroastrianism: "§YZoroastrianism§!"
  religion_zoroastrianism_adj: "Zoroastrians"
  religion_zoroastrianism_desc: ""
+ religion_dogon: "§YDogon§!"
+ religion_dogon_adj: "Dogon"
+ religion_dogon_desc: ""
+ religion_serer: "§YSerer§!"
+ religion_serer_adj: "Serer"
+ religion_serer_desc: ""
+ religion_abosom: "§YAbosom§!"
+ religion_abosom_adj: "Aboso"
+ religion_abosom_desc: ""
+ religion_vodun: "§YVodun§!"
+ religion_vodun_adj: "Voduun"
+ religion_vodun_desc: ""
+ religion_isese: "§YIsese§!"
+ religion_isese_adj: "Isese"
+ religion_isese_desc: ""
+ religion_odinala: "§YỌdinala§!"
+ religion_odinala_adj: "Ọdinani"
+ religion_odinala_desc: ""
+ religion_maguzanci: "§YMaguzanci§!"
+ religion_maguzanci_adj: "Maguzawa"
+ religion_maguzanci_desc: ""
+ religion_abwoi: "§YAbwoi§!"
+ religion_abwoi_adj: "Nenzits"
+ religion_abwoi_desc: ""
+ religion_lotuko: "§YLotuko§!"
+ religion_lotuko_adj: "Lotukoe"
+ religion_lotuko_desc: ""
+ religion_dinka: "§YDinka§!"
+ religion_dinka_adj: "Dinka"
+ religion_dinka_desc: ""
+ religion_kalenjin: "§YKalenjin§!"
+ religion_kalenjin_adj: "Kalenjin"
+ religion_kalenjin_desc: ""
+ religion_waaqism: "§YWaaqism§!"
+ religion_waaqism_adj: "Waaqeffanna"
+ religion_waaqism_desc: ""
+ religion_maasai: "§YMaasai§!"
+ religion_maasai_adj: "Maasai"
+ religion_maasai_desc: ""
+ religion_bushongo: "§YBushongo§!"
+ religion_bushongo_adj: "Bushongo"
+ religion_bushongo_desc: ""
+ religion_lugbar: "§YLugbar§!"
+ religion_lugbar_adj: "Lugbara"
+ religion_lugbar_desc: ""
+ religion_baluba: "§YBaluba§!"
+ religion_baluba_adj: "Baluba"
+ religion_baluba_desc: ""
+ religion_mbuti: "§YMbuti§!"
+ religion_mbuti_adj: "Bambutis"
+ religion_mbuti_desc: ""
+ religion_gikuyu: "§YGikuyu§!"
+ religion_gikuyu_adj: "Gikuyu"
+ religion_gikuyu_desc: ""
+ religion_lozi: "§YLozi§!"
+ religion_lozi_adj: "Lozis"
+ religion_lozi_desc: ""
+ religion_tumbuka: "§YTumbuka§!"
+ religion_tumbuka_adj: "Tumbukis"
+ religion_tumbuka_desc: ""
+ religion_zulu: "§YZulu§!"
+ religion_zulu_adj: "Zulu"
+ religion_zulu_desc: ""
+ religion_shetwani: "§YShetwani§!"
+ religion_shetwani_adj: "Shetwanis"
+ religion_shetwani_desc: ""
+ religion_badimo: "§YBadimo§!"
+ religion_badimo_adj: "Badimoa"
+ religion_badimo_desc: ""
+ religion_saan: "§YSaan§!"
+ religion_saan_adj: "Saan"
+ religion_saan_desc: ""
+ religion_fomba_gasy: "§YFomba-Gasy§!"
+ religion_fomba_gasy_adj: "Gasy"
+ religion_fomba_gasy_desc: ""
+ religion_hinduism: "§YHinduism§!"
+ religion_hinduism_adj: "Hindus"
+ religion_hinduism_desc: ""
+ religion_other_animist: "§YOther Animist§!"
+ religion_other_animist_adj: "Animist"
+ religion_other_animist_desc: ""
