zoinks scoob, wehn do we get snacks?

--- a/localisation/english/prestige_l_english.yml
+++ b/localisation/english/prestige_l_english.yml
@@ -1,31 +1,33 @@
 ﻿l_english:
 # Scripted Localisation
- prestige_country_adjective_st:0 "st"
- prestige_country_adjective_nd:0 "nd"
- prestige_country_adjective_rd:0 "rd"
- prestige_country_adjective_th:0 "th"
+ prestige_country_adjective_st: "st"
+ prestige_country_adjective_nd: "nd"
+ prestige_country_adjective_rd: "rd"
+ prestige_country_adjective_th: "th"
 
- prestige_country_total_display_achievement:0 ":\n§YAchievement ([?ROOT.prestige_achievement])[§!\n Achievement   §G+[?ROOT.prestige_achievement]§!"
- prestige_country_total_display_science:0 "\n§YScience ([?ROOT.prestige_tech])§![GetNationalPrestigeTotalDisplayScienceInventions][GetNationalPrestigeTotalDisplayScienceTechnologies]"
- prestige_country_total_display_science_inventions:0 "\n Inventions   §G+[?ROOT.prestige_tech_inventions]§!"
- prestige_country_total_display_science_technologies:0 "\n Technologies   §G+[?ROOT.prestige_tech_research]§!"
- prestige_country_total_display_economy:0 "\n§YEconomy ([?ROOT.prestige_economy])§![GetNationalPrestigeTotalDisplayEconomyFactories][GetNationalPrestigeTotalDisplayEconomyExports]"
- prestige_country_total_display_economy_factories:0 "\n Factories   §G+[?ROOT.prestige_economy_factories]§!"
- prestige_country_total_display_economy_exports:0 "\nExports   §G+[?ROOT.prestige_economy_exports]§!"
- prestige_country_total_display_empire:0 "\n§YEmpire ([?ROOT.prestige_empire])§![GetNationalPrestigeTotalDisplayEmpireRank][GetNationalPrestigeTotalDisplayEmpireStates][GetNationalPrestigeTotalDisplayEmpireSubject]"
- prestige_country_total_display_empire_rank_great:0 "\n Great Power   §G+25§!"
- prestige_country_total_display_empire_rank_secondary:0 "\n Secondary Power   §G+15§!"
- prestige_country_total_display_empire_rank_minor:0 "\n Minor Power   §G+10§!"
- prestige_country_total_display_empire_rank_irrelevant:0 "\n Irrelevant Power   §G+5§!"
- prestige_country_total_display_empire_states:0 "\n Controlled States   §G+[?ROOT.prestige_empire_states]§!"
- prestige_country_total_display_empire_subject:0 "\n Has Subjects   §G+[?ROOT.prestige_empire_subject]§!"
- prestige_country_total_display_military:0 "\n§YMilitary ([?ROOT.prestige_army])§![GetNationalPrestigeTotalDisplayMilitaryBattalions][GetNationalPrestigeTotalDisplayMilitaryShips][GetNationalPrestigeTotalDisplayMilitaryPlanes][GetNationalPrestigeTotalDisplayMilitaryEra][GetNationalPrestigeTotalDisplayMilitarySubject]"
- prestige_country_total_display_military_battalions:0 "\n Battalions   §G+[?ROOT.prestige_army_battalions]§!"
- prestige_country_total_display_military_ships:0 "\n Ships   §G+[?ROOT.prestige_army_ships]§!"
- prestige_country_total_display_military_planes:0 "\n Planes   §G+[?ROOT.prestige_army_planes]§!"
- prestige_country_total_display_military_era_nomadic:0 "\n Nomadic Warriors   §R-35%§!"
- prestige_country_total_display_military_era_levies:0 "\n Agrarian Levies   §R-20%§!"
- prestige_country_total_display_military_era_traditional:0 "\n Traditional Army   §R-7.5%§!"
- prestige_country_total_display_military_era_modern:0 "\n Modern Army   §G+15%§!"
- prestige_country_total_display_military_subject:0 "\n Has Subjects   §G+[?ROOT.prestige_military_subject]§!"
- prestige_country_total_display_subject:0 "\n§YAutonomy§!\n Is Subject   §R-70%§!"
+ prestige_country_total_display_achievement: ":\n§YAchievement ([?THIS.prestige_achievement])§!\n Achievement   §G+[?THIS.prestige_achievement]§!"
+ prestige_country_total_display_humanities: ":\n§YHumanities ([?THIS.prestige_humanities])§!\n Humanities   §G+[?THIS.modifier@prestige_humanities_modifier|0]§![GetNationalPrestigeTotalDisplayHumanitiesInstitutions]"
+ prestige_country_total_display_humanities_institutions: "\n Institutions   §G+[?THIS.modifier@prestige_humanities_institutions_modifier|0]§!"
+ prestige_country_total_display_science: "\n§YScience ([?THIS.prestige_tech])§![GetNationalPrestigeTotalDisplayScienceInventions][GetNationalPrestigeTotalDisplayScienceTechnologies]"
+ prestige_country_total_display_science_inventions: "\n Inventions   §G+[?THIS.prestige_tech_inventions]§!"
+ prestige_country_total_display_science_technologies: "\n Technologies   §G+[?THIS.prestige_tech_research]§!"
+ prestige_country_total_display_economy: "\n§YEconomy ([?THIS.prestige_economy])§![GetNationalPrestigeTotalDisplayEconomyFactories][GetNationalPrestigeTotalDisplayEconomyExports]"
+ prestige_country_total_display_economy_factories: "\n Factories   §G+[?THIS.prestige_economy_factories]§!"
+ prestige_country_total_display_economy_exports: "\nExports   §G+[?THIS.prestige_economy_exports]§!"
+ prestige_country_total_display_empire: "\n§YEmpire ([?THIS.prestige_empire])§![GetNationalPrestigeTotalDisplayEmpireRank][GetNationalPrestigeTotalDisplayEmpireStates][GetNationalPrestigeTotalDisplayEmpireSubject]"
+ prestige_country_total_display_empire_rank_great: "\n Great Power   §G+25§!"
+ prestige_country_total_display_empire_rank_secondary: "\n Secondary Power   §G+15§!"
+ prestige_country_total_display_empire_rank_minor: "\n Minor Power   §G+10§!"
+ prestige_country_total_display_empire_rank_irrelevant: "\n Irrelevant Power   §G+5§!"
+ prestige_country_total_display_empire_states: "\n Controlled States   §G+[?THIS.prestige_empire_states]§!"
+ prestige_country_total_display_empire_subject: "\n Has Subjects   §G+[?THIS.prestige_empire_subject]§!"
+ prestige_country_total_display_military: "\n§YMilitary ([?THIS.prestige_army])§![GetNationalPrestigeTotalDisplayMilitaryBattalions][GetNationalPrestigeTotalDisplayMilitaryShips][GetNationalPrestigeTotalDisplayMilitaryPlanes][GetNationalPrestigeTotalDisplayMilitaryEra][GetNationalPrestigeTotalDisplayMilitarySubject]"
+ prestige_country_total_display_military_battalions: "\n Battalions   §G+[?THIS.prestige_army_battalions]§!"
+ prestige_country_total_display_military_ships: "\n Ships   §G+[?THIS.prestige_army_ships]§!"
+ prestige_country_total_display_military_planes: "\n Planes   §G+[?THIS.prestige_army_planes]§!"
+ prestige_country_total_display_military_era_nomadic: "\n Nomadic Warriors   §R-35%§!"
+ prestige_country_total_display_military_era_levies: "\n Agrarian Levies   §R-20%§!"
+ prestige_country_total_display_military_era_traditional: "\n Traditional Army   §R-7.5%§!"
+ prestige_country_total_display_military_era_modern: "\n Modern Army   §G+15%§!"
+ prestige_country_total_display_military_subject: "\n Has Subjects   §G+[?THIS.prestige_military_subject]§!"
+ prestige_country_total_display_subject: "\n§YAutonomy§!\n Is Subject   §R-70%§!"
