--- a/localisation/english/_RCE_edc_africa_l_english.yml
+++ b/localisation/english/_RCE_edc_africa_l_english.yml
@@ -1634,24 +1634,24 @@
  SAF_CC_anarchism_ADJ: "Cape"
  SAF_CC_imperialism_ADJ: "Cape"
  SAF_CC_fundamentalism_ADJ: "Cape"
- OMA_MUS_reformism: "Sultanate of Muscat-Oman"
- OMA_MUS_traditionalism: "Sultanate of Muscat and Oman"
+ OMA_MUS_reformism: "Muscat-Oman"
+ OMA_MUS_traditionalism: "Muscat and Oman"
  OMA_MUS_social_egalitarianism: "Muscat and Oman"
  OMA_MUS_collectivist_socialism: "Muscat and Oman"
  OMA_MUS_vanguard_communism: "Muscat and Oman"
- OMA_MUS_imperialism: "Sultanate of Muscat and Oman"
+ OMA_MUS_imperialism: "Muscat and Oman"
  OMA_MUS_radical_democracy: "Muscat and Oman"
  OMA_MUS_anarchism: "Muscat and Oman"
- OMA_MUS_fundamentalism: "Sultanate of Muscat and Oman"
- OMA_MUS_reformism_DEF: "Sultanate of Muscat and Oman"
- OMA_MUS_traditionalism_DEF: "Sultanate of Muscat and Oman"
+ OMA_MUS_fundamentalism: "Muscat and Oman"
+ OMA_MUS_reformism_DEF: "Muscat and Oman"
+ OMA_MUS_traditionalism_DEF: "Muscat and Oman"
  OMA_MUS_social_egalitarianism_DEF: "Muscat and Oman"
  OMA_MUS_collectivist_socialism_DEF: "Muscat and Oman"
  OMA_MUS_vanguard_communism_DEF: "Muscat and Oman"
- OMA_MUS_imperialism_DEF: "Sultanate of Muscat and Oman"
+ OMA_MUS_imperialism_DEF: "Muscat and Oman"
  OMA_MUS_radical_democracy_DEF: "Muscat and Oman"
  OMA_MUS_anarchism_DEF: "Muscat and Oman"
- OMA_MUS_fundamentalism_DEF: "Sultanate of Muscat and Oman"
+ OMA_MUS_fundamentalism_DEF: "Muscat and Oman"
  OMA_MUS_reformism_ADJ: "Omani"
  OMA_MUS_traditionalism_ADJ: "Omani"
  OMA_MUS_social_egalitarianism_ADJ: "Omani"
