--- a/localisation/english/ledger_l_english.yml
+++ b/localisation/english/ledger_l_english.yml
@@ -1,3 +1,13 @@
 ﻿l_english:
- ledger_country_flag_tt: "[THIS.GetName]"
- ledger_country_flag_tt_delayed: "Hello"
+ ledger_page_global_summary_title: "Global Summary"
+ ledger_country_flag_tt: "[THIS.GetNameDef]"
+ ledger_country_flag_tt_delayed: "Insert Relevant Information Here"
+ country_prestige_rank_title_tt: "§gRank§!"
+ country_prestige_rank_tt: "§o[?THIS.prestige_rank]§!"
+ country_name_title_tt: "§gCountry§!"
+ country_prestige_title_tt: "§gPrestige§!"
+ country_ideology_title_tt: "§gRuling Party§!"
+ country_regiment_title_tt: "§gArmy§!"
+ country_manpower_title_tt: "§gManpower§!"
+ country_technologies_title_tt: "§gTechnologies§!"
+ country_bureaucracy_title_tt: "§gBureaucracy§!"
