--- a/localisation/english/_diplomacy_l_english.yml
+++ b/localisation/english/_diplomacy_l_english.yml
@@ -1,3 +1,9 @@
 ﻿l_english:
  sphere_member_none: "None"
  sphere_member_iterate: "[?sphere_member_array^sphere_member_temp.GetNameWithFlag], [GetSphereIterate]"
+
+
+ colonial_empire_europe: "[ROOT.GetAdjective] Europe"
+ colonial_empire_india: "[ROOT.GetAdjective] India"
+ colonial_empire_asia: "[ROOT.GetAdjective] Asia"
+ colonial_empire_americas: "[ROOT.GetAdjective] Americas"
