--- a/localisation/english/ledger_l_english.yml
+++ b/localisation/english/ledger_l_english.yml
@@ -4,10 +4,14 @@
  ledger_country_flag_tt_delayed: "Insert Relevant Information Here"
  country_prestige_rank_title_tt: "§gRank§!"
  country_prestige_rank_tt: "§o[?THIS.prestige_rank]§!"
+ country_prestige_rank_tt_delayed: "$COUNTRY_POWER$"
  country_name_title_tt: "§gCountry§!"
  country_prestige_title_tt: "§gPrestige§!"
  country_ideology_title_tt: "§gRuling Party§!"
  country_regiment_title_tt: "§gArmy§!"
  country_manpower_title_tt: "§gManpower§!"
+ country_manpower_tt: "[GetDisplayManpower]/[GetDisplayManpowerCapacity]"
+ country_manpower_under_1M: "[?manpower_k|2]K"
+ country_manpower_over_1M: "[?manpower_temp|2]M"
  country_technologies_title_tt: "§gTechnologies§!"
  country_bureaucracy_title_tt: "§gBureaucracy§!"
