stuff i had to push

--- a/localisation/english/tunisia_events_l_english.yml
+++ b/localisation/english/tunisia_events_l_english.yml
@@ -39,7 +39,7 @@ tunisia.100.d:0 "We got news of the death of General Ferhat, it seems that he wa
 tunisia.100.a:0 "We must fight back!"
 
 tunisia.9.t:0 "French fleet spotted near our coasts!"
-tunisia.9.d:0 "This morning, the Bey woke up to news of an unexpected visit from the French Navy. Seven Hundred cannons are ready to fire upon us and destroy our coast if we don't change our current laws."
+tunisia.9.d:0 "This morning, the Bey woke up to news of an unexpected visit from the French Navy. Nine ships armed with seven hundred cannons have been displaced in La Goulette to "help the Bey against any person who prevents him from granting freedom to your subjects and to assure them of the peace and security of their persons and their property”, as stated by the admiral commanding the fleet. Meanwhile we got news of a new message from the British Consul Richard Wood who added that a British squadron anchored in Malta is awaiting his word if tensions flare between the Bey and admiral or if any threats by the fleet are formulated against the town. "
 tunisia.9.a:0 "We should have expected this..."
 
 tunisia.10.t:0 "Naval bombing of Tunis"
